kubernetes/apps/pgadmin/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
