kubernetes/apps/pgadmin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
spec:
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: http
      port: 5050
      targetPort: 5050
  type: ClusterIP
