kubernetes/apps/pgadmin/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=pgadmin"
    gethomepage.dev/name: pgAdmin
    gethomepage.dev/description: PostgreSQL Administration (CNPG)
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: pgadmin.png
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - pgadmin.timourhomelab.org
  rules:
    - backendRefs:
        - name: pgadmin
          port: 5050
